Updated upi id and web app url

--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
 
   <script>
     // ========== CONFIGURE THESE ==========
-    const WEBAPP_URL = "YOUR_WEBAPP_URL"; // <--- replace with your Apps Script web app URL (see backend below)
-    const UPI_ID = "YOUR_UPI_ID";         // <--- replace with merchant UPI ID (ex: flavoursofamma@oksbi)
+    const WEBAPP_URL = "https://script.google.com/macros/s/AKfycbxFwylV6C2cvrLNqgFA60dTCraH-eqsihVG_j5VKJp3GuUTSoeR_srXleLRqYDZnJQxmw/exec"; // <--- replace with your Apps Script web app URL (see backend below)
+    const UPI_ID = "preethihskumar@ibl";         // <--- replace with merchant UPI ID (ex: flavoursofamma@oksbi)
     const MERCHANT_NAME = "Flavours of Amma";
     // =====================================
 
